--- a/src/components/FriendList/friendList.module.css
+++ b/src/components/FriendList/friendList.module.css
@@ -10,7 +10,7 @@
 }
 .item {
   margin: 0;
-  padding: 0;
+  padding: 12px 0 12px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -23,21 +23,23 @@
   width: 26px;
   height: 26px;
   border-radius: 50%;
-  margin: 0 15px 0 15px;
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 .online {
+  composes: status;
   background-color: green;
 }
 .offline {
+  composes: status;
   background-color: red;
 }
 
 .avatar {
   width: 100px;
   height: auto;
-  border-radius: 26px;
-  padding: 12px 0 12px 0;
+  border-radius: 6px;
 }
 
 .name {
